great-idea/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Copy and paste your work from yesterday here and start to refactor into flexbox */

body{
	
	display: flex;
	flex-direction: column;
	justify-content: space-around;
	padding: 2% 5%;
}

nav{
	display: flex;
	justify-content: space-around;
}

a{
	color:gray;
	margin: 2%;
	text-decoration: none;
}

h1{
	font-size: 300%;
}

header{
	display: flex;
	justify-content: space-around;
	padding-bottom: 1%;
}

.headerdiv{
	text-align: center;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-content: center;
}

header span{
	border: black 1px solid;
}

.firstpic{
	width: 70%;
}

.addspace{
	display: flex;
	flex-direction: column;
	justify-content: space-around;
}

.firstsec{
	border-top: 1px black solid;
	display: flex;
	justify-content: space-between;
	padding: 2% 0%;
}

.firstsec div{
	width: 48%;
}


.middle-img{
	width: 100%;
}

.secsec{
	border-bottom: 1px black solid;
	display: flex;
	justify-content: space-between;
	padding: 2% 0%;
}

.secsec div{
	width: 30%;
}

.contact{
	padding: 2% 0%;
}

footer{
	text-align: center;
	display: flex;
	justify-content: center;
	padding-bottom: 2%;
}

/* CSS for services page starting here */
 
.servbody{
	display: flex;
	flex-direction: column;
	padding: 2% 5%;
}

.allboxes{
	display: flex;
	flex-wrap: wrap;
	justify-content: space-around;
	align-content: space-around;
}


.boxes{
	width: 45%;
	border: black solid 1px;
	background-color: lightgray;
}

.boxes span{
	border: black 1px solid;
}

